test_suite/tests/ui/duplicate-attribute/two-rename-ser.stderr
error: duplicate serde attribute `rename`
  --> $DIR/two-rename-ser.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

